# lern_tg_bot

./: .checkov.yaml  .dockerignore  .env.example  .gitignore  .mega-linter.yml  .trivyignore  .yamllint.yml  Dockerfile  Makefile  README.md  compose.yaml  main.py  pyproject.toml
.github/workflows/: ci.yml  mega-linter.yml
app/: __main__.py  main.py
app/bot/handlers/: __init__.py  echo.py  roll.py  start.py
app/core/: config.py  logging.py
tests/bot/handlers/: test_roll.py
